# ant_sph_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
ant_sph_tools/: __init__.py  farfield.py  io.py
matlab/: FFfromSph.m  ReadSphModes.m  importfile_sph.m  readme.txt
matlab/RadioScience_distribution/: SphModes_demo.m  hertzian_x_dip_array_FarField2_299MHz.sph  hertzian_x_dip_array_yzFarField.m  hertzian_z_dip_array_xyFarField1.m  hertzian_z_dip_array_xzFarField1.m  hertzian_z_dip_array_yzFarField1.m
sph/: hertzian_dipole_FarField1_299MHz.sph  hertzian_xy_dipole_FarField1_299MHz.sph  hertzian_z_dip_array_FarField1_299MHz.sph
src/ant_sph_tools/: __init__.py  farfield.py  io.py  legendre_norm.py  numba_factorial.py
tests/: ff_coeffs_py.txt  test_ff.ipynb  test_ff.py  test_read_sph.py
tests/matlab/: test_ReadSphModes.mat  test_dipole_FarField1_299MHz.mat  test_hertzian_dipole_FarField1_299MHz.mat  test_hertzian_x_dip_array_FarField2_299MHz.mat  test_hertzian_x_dipole_FarField1_299MHz.mat  test_hertzian_xy_dipole_FarField1_299MHz.mat  test_hertzian_y_dipole_FarField1_299MHz.mat  test_hertzian_z_dip_array_FarField1_299MHz.mat
tests/sph/: dipole_FarField1_299MHz.sph  hertzian_x_dipole_FarField1_299MHz.sph  hertzian_y_dipole_FarField1_299MHz.sph
